[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpcv-motion-guidance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "albumentations==0.4.3",
    "clip",
    "diffusers>=0.32.2",
    "einops==0.3.0",
    "gradio",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.4.2",
    "kornia==0.6",
    "numpy==1.19.2",
    "omegaconf==2.1.1",
    "opencv-python==4.1.2.30",
    "pip>=20.3",
    "pygame>=2.6.1",
    "pytorch-lightning==1.4.2",
    "segment-anything",
    "streamlit>=0.73.1",
    "taming-transformers-rom1504>=0.0.6",
    "test-tube>=0.7.5",
    "torch>=1.11.0",
    "torch-fidelity==0.3.0",
    "torchmetrics==0.6.0",
    "torchvision==0.14.0",
    "transformers==4.19.2",
    "uv>=0.6.9",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "main" }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
